tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_incorrect_turbofish_count_method_call/execute__tests__noirc_frontend_tests_incorrect_turbofish_count_method_call_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected 1 generic from this function, but 2 were provided
   ┌─ src/main.nr:26:21
   │
26 │             let _ = foo.generic_method::<Field, u32>();
   │                     ----------------------------------
   │

Aborting due to 1 previous error
