tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_incorrect_turbofish_count_method_call/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected 1 generic from this function, but 2 were provided
   ┌─ src/main.nr:26:21
   │
26 │             let _ = foo.generic_method::<Field, u32>();
   │                     ----------------------------------
   │

Aborting due to 1 previous error
